# splunk-opentelemetry-examples

./: .gitignore  README.md
collector/amd-gpu-metrics/: README.md  eks-cluster-config.yaml  values.yaml
collector/cisco-ai-ready-pods/: README.md
collector/cisco-ai-ready-pods/base-otel-collector-config/: values.yaml
collector/cisco-ai-ready-pods/intersight/: values.yaml
collector/cisco-ai-ready-pods/nexus/: cisco_exporter_k8s_all_in_one.yaml
collector/cisco-ai-ready-pods/otel-collector/: values.yaml
collector/docker-swarm/: README.md  config1.yml  docker-compose_config.yml  docker-compose_with_app.yml  init_instance.sh  sample-app-docker-compose.yml
collector/k8s-collector-with-gateway/: README.md  values.yaml
collector/k8s-with-windows-nodes/: .gitignore  README.md  values-linux.yaml  values-windows.yaml
collector/nvidia-gpu-metrics/: README.md  values.yaml
collector/nvidia-nim-operator-metrics/: README.md  values.yaml
collector/vast-data/: README.md  values.yaml
gen-ai/autogen/: README.md
gen-ai/autogen/src/: app.py  evaluator_agent.py  idea_generator_agent.py  market_research_agent.py  message.py  pyproject.toml
gen-ai/aws-agentcore/: .gitignore  README.md
gen-ai/aws-agentcore/agentcoreExample/: pyproject.toml
gen-ai/aws-agentcore/agentcoreExample/src/: main.py
gen-ai/aws-agentcore/agentcoreExample/src/mcp_client/: client.py
gen-ai/aws-agentcore/agentcoreExample/src/model/: load.py
gen-ai/aws-agentcore/agentcoreExample/test/: test_main.py
gen-ai/aws-bedrock/: README.md  app.py  requirements.txt
gen-ai/aws-bedrock-lite-llm-proxy/: README.md
gen-ai/aws-bedrock-lite-llm-proxy/app/: app.py  requirements.txt
gen-ai/aws-bedrock/proxy/: config.yaml
gen-ai/azure-open-ai/: README.md  app.py  requirements.txt
gen-ai/claude-code/: README.md
gen-ai/crewai-framework/: README.md
gen-ai/crewai-framework/math_problems/: pyproject.toml
gen-ai/crewai-framework/math_problems/src/math_problems/: crew.py  main.py
gen-ai/crewai-framework/math_problems/src/math_problems/config/: agents.yaml  tasks.yaml
gen-ai/langgraph/: README.md
gen-ai/langgraph/math_problems/: pyproject.toml
gen-ai/langgraph/math_problems/src/: app.py
gen-ai/lite-llm-proxy/: README.md
gen-ai/lite-llm-proxy-k8s/: Chart.yaml  README.md  values.yaml
gen-ai/lite-llm-proxy/app/: app.py  requirements.txt
gen-ai/lite-llm-proxy/proxy/: config.yaml
gen-ai/microsoft-foundry-agent-service/: README.md
gen-ai/microsoft-foundry-agent-service/client/: app.py
gen-ai/openai-agents/: README.md
gen-ai/openai-agents/math_problems/: pyproject.toml
gen-ai/openai-codex/: README.md  config.toml
gen-ai/vertex-ai-agent-builder/: README.md
gen-ai/vertex-ai-agent-builder/vertex-otel-shim/: Dockerfile  converter.py  deploy.sh  main.py  requirements.txt
install_decision_workflow/: README.md
instrumentation/android-astronomy-shop/: README.md  SETUP.md  SPLUNK_RUM_INSTRUMENTATION_GUIDE.md  build.gradle.kts  gradle.properties  settings.gradle.kts
instrumentation/android-astronomy-shop/app/: build.gradle.kts
instrumentation/dotnet/aws-ecs/: README.md
instrumentation/dotnet/aws-lambda-aspnetcoreserver/: .gitignore  README.md  samconfig.toml  template.yaml.base
instrumentation/dotnet/azure-app-service/: .gitignore  README.md
instrumentation/dotnet/azure-container-apps/: README.md
instrumentation/dotnet/azure-container-apps-without-collector/: README.md
instrumentation/dotnet/azure-functions/: Program.cs  README.md  SplunkTelemetryConfigurator.cs  azure-function-dotnet8-opentelemetry-example.cs  azure-functions.csproj  azure-functions.sln
instrumentation/dotnet/google-cloud-functions/: README.md
instrumentation/dotnet/k8s-windows/: Dockerfile  (+2 more)
instrumentation/ios-astronomy-shop/: Package.swift  README.md  SETUP-GUIDE.md  iOS-Splunk-Instrumentation-Guide.md
misc/argo-rollout/: Dockerfile  README.md  analysis-template.yaml  check_splunk_metric.sh  rollout-update.yaml  rollout.yaml  service.yaml
misc/istio/: README.md  collector-values.yaml  svc1.yaml  svc2.yaml  tracing.yaml
(+280 files in other folders)
