[project]
name = "startup_ideas"
version = "0.1.0"
description = "Startup Ideas using AutoGen"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "autogen-agentchat",
    "autogen-core",
    "autogen-ext",
    "tiktoken",
    "openlit",
    "splunk-opentelemetry",
]
