[project]
name = "math_problems"
version = "0.1.0"
description = "math_problems using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0",
    "openlit>=1.35.0",
    "splunk-opentelemetry>=2.6.0",
]

[project.scripts]
math_problems = "math_problems.main:run"
run_crew = "math_problems.main:run"
train = "math_problems.main:train"
replay = "math_problems.main:replay"
test = "math_problems.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
