[project]
name = "math_problems"
version = "0.1.0"
description = "Solving math problems using LangGraph"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "langchain",
    "langchain-openai",
    "langgraph",
    "langgraph-checkpoint",
    "langchain-core>=1.2.28",
    "splunk-opentelemetry",
    "splunk-otel-genai-emitters-splunk",
    "splunk-otel-genai-evals-deepeval",
    "splunk-otel-instrumentation-langchain",
    "splunk-otel-util-genai",
    "splunk-otel-util-genai-evals",
]
